--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ epi_judge_java/java_build/
 
 # OS X specific files
 .DS_Store
+
+# ipython notebook checkpoints
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
